tests/syntax/type-metatype.tea
#main

internal TestForMetaType0 {
	prop = 'some'
	TRUE = 1

	static test_class_argument(class TestForMetaType0.Type) {
		var_dump(class)
	}

	static test_array_argument(array111 Array = [1]) {
		var_dump(array111)
	}
}

internal TestForMetaType1: TestForMetaType0 {
	//
}

internal TestForMetaType2 {
	//
}

var string_type = String
echo string_type

var class_type = TestForMetaType0
TestForMetaType0.test_class_argument(class_type) 		// OK
TestForMetaType0.test_class_argument(TestForMetaType1)  // OK
// TestForMetaType0.test_class_argument(TestForMetaType2) // error

TestForMetaType0.test_array_argument([])

